updaterrr ~ #sortable chip visibility. TOC 1.4. still includes word-wrap fix.

--- a/apollostage/b16/_base.scss
+++ b/apollostage/b16/_base.scss
@@ -107,7 +107,7 @@
    ## 1.1 Desktop view, handling of all classes
    ## 1.2 Reserved
    ## 1.3 Reserved
-   ## 1.4 Reserved
+   ## 1.4 Sortable Items
    ## 1.5 Discog Pages
    ## 1.6 Tooltips
    ## 1.7 Upload Category Decoration Striping
@@ -1559,11 +1559,17 @@ blockquote {
 #sortable li {
   word-break: break-all;
   cursor: move;
+  border: transparent thin;
+  border-radius: 2rem;
 }
+
 #sortable label {
   cursor: move;
 }
 
+#sortable li:hover {
+  background-color: #00000022;
+}
 /* checkboxes */
 form input {
   vertical-align: center;
@@ -3676,7 +3682,8 @@ Documentation of mobile classes:
 
 /* ## 6.66 Emergency Fixes */
 
-.wrap_overflow {  word-break:break-word !important;
+.wrap_overflow {
+  word-break: break-word !important;
 }
 
 /* ########################################################################
