--- a/apollostage/b16/style.css
+++ b/apollostage/b16/style.css
@@ -27,7 +27,7 @@
    ## 1.1 Desktop view, handling of all classes
    ## 1.2 Reserved
    ## 1.3 Reserved
-   ## 1.4 Reserved
+   ## 1.4 Sortable Items
    ## 1.5 Discog Pages
    ## 1.6 Tooltips
    ## 1.7 Upload Category Decoration Striping
@@ -1422,10 +1422,16 @@ blockquote {
 #sortable li {
   word-break: break-all;
   cursor: move;
+  border: transparent thin;
+  border-radius: 2rem;
 }
 
 #sortable label {
   cursor: move;
+}
+
+#sortable li:hover {
+  background-color: rgba(0, 0, 0, 0.1333333333);
 }
 
 /* checkboxes */
